# ha-dominion-sc

./: .gitignore  .ruff.toml  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  release.yaml  test.yaml  validate.yaml
custom_components/dominionsc/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  quality_scale.yaml  rates.py  sensor.py  strings.json
custom_components/dominionsc/translations/: en.json
scripts/: lint  setup  test
tests/: __init__.py  conftest.py  test_config_flow.py
